// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useForm getFieldProps should return the correct object 1`] = `
Object {
  "error": undefined,
  "onBlur": [Function],
  "onChange": [Function],
  "submitting": false,
  "touched": false,
  "value": "name",
}
`;

exports[`useForm getFieldProps should return the correct object 2`] = `
Object {
  "error": undefined,
  "onBlur": [Function],
  "onChange": [Function],
  "submitting": false,
  "touched": false,
  "value": "lastName",
}
`;

exports[`useForm should return the correct object 1`] = `
Object {
  "getFieldProps": [Function],
  "handleSubmit": [Function],
  "invalid": false,
  "pristine": true,
  "resetForm": [Function],
}
`;
